# ocaml-99-problems

./: .ocamlformat  README.md  addExecutable.sh  dune-project  ninety_nine_problems.opam
lib/: dune  output.ml
test/: dune
