(lang dune 3.10)

(name ninety_nine_problems)

(generate_opam_files true)

(source
 (github alexMoraes/ocaml-99-problems))

(authors "Alex Moraes")

(maintainers "Alex Moraes")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ninety_nine_problems)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
